openshift/ubi8_docker_deployment/py-ubi8docker-srvc-depl.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: py-tls
      app.kubernetes.io/part-of: py-tls
    name: pytls-ubi8docker-srvc
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: py-tls
      app.kubernetes.io/part-of: py-tls
    name: pytls-ubi8docker-srvc
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: pytls-ubi8docker-srvc:latest
    source:
      contextDir: /
      git:
        ref: tz-000001-init
        uri: https://github.com/pavlo-shcherbukha/tls-pyflask-srvc.git
      sourceSecret:
        name: psh-gihtub
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: ./openshift/ubi8_docker_deployment/Dockerfile
      type: Docker
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: py-tls
      app.kubernetes.io/part-of: py-tls
    name: pytls-ubi8docker-srvc
    namespace: pashakx-dev
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: pytls-ubi8docker-srvc
      deploymentconfig: pytls-ubi8docker-srvc
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: pytls-ubi8docker-srvc
          deploymentconfig: pytls-ubi8docker-srvc
      spec:
        containers:
        - env:
          - name: GUNICORN_CMD_ARGS
            value: --workers=1 --worker-connections=2000  --bind=0.0.0.0:8080 --access-logfile=-
              --name=wsgi
          - name: FLASK_APP
            value: sh_app.webapp
          - name: FLASK_DEBUG
            value: "0"
          - name: FLASK_ENV
            value: development
          - name: DB_HOST
            value: demo-couchdb
          - name: DB_PORT
            value: "80"
          - name: DB_NAME
            value: shdb
          imagePullPolicy: Always
          name: pytls-ubi8docker-srvc
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - pytls-ubi8docker-srvc
        from:
          kind: ImageStreamTag
          name: pytls-ubi8docker-srvc:latest
          namespace: pashakx-dev
      type: ImageChange
    - type: ConfigChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: py-tls
      app.kubernetes.io/part-of: py-tls
    name: pytls-ubi8docker-srvc
  spec:
    ports:
    - name: 8080-tcp
      nodePort: 0
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: pytls-ubi8docker-srvc
  status:
    loadBalancer: {}
kind: List
metadata: {}
