openshift/ubi8_docker_deployment/py-ubi8docker-route-depl.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: py-tls
      app.kubernetes.io/part-of: py-tls
    name: pytls1ubi8docker-srvc-pashakx-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
  spec:
    host: pytls1ubi8docker-srvc-pashakx-dev.apps.sandbox-m3.1530.p1.openshiftapps.com
    port:
      targetPort: 8080
    tls:
      termination: passthrough
    to:
      kind: Service
      name: pytls-ubi8docker-srvc
      weight: null
  status:
    ingress: null
kind: List
metadata: {}
